[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/barHorizontal_yellow_mid.png" type="Texture" id=2]
[ext_resource path="res://Assets/barHorizontal_blue_mid.png" type="Texture" id=3]
[ext_resource path="res://Assets/barHorizontal_green_mid.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/pageTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/pageName.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Fonts/pageBtn.tres" type="DynamicFont" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1930.28 ]
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 5.0
margin_right = -35.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuName" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 7 )
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 22.0
margin_right = 330.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 30 )

[node name="title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 56.0
margin_right = 330.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Name"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 114.0
margin_right = 330.0
margin_bottom = 180.0
rect_min_size = Vector2( 55, 66 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 330.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/playBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 243.0
margin_right = 330.0
margin_bottom = 273.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 277.0
margin_right = 330.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/settingsBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 336.0
margin_right = 330.0
margin_bottom = 366.0
rect_min_size = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 370.0
margin_right = 330.0
margin_bottom = 425.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[node name="label" type="Label" parent="NinePatchRect/VBoxContainer/quitBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NinePatchRect/VBoxContainer/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/settingsBtn" to="." method="_on_settingsBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/quitBtn" to="." method="_on_quitBtn_pressed"]
